--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "test-package-1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-redux": "^5.1.0",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
