--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "reselect": "^4.0.0",
     "styled-components": "^4.0.3"
   },
+  "devDependencies": {
+    "jest": "^23.6.0",
+    "jest-mock-random": "^1.0.2",
+    "redux-mock-store": "^1.5.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
