--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "homepage": "./",
   "dependencies": {
     "prop-types": "^15.6.2",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
+    "ramda": "^0.26.1",
+    "react": "^16.7.0-alpha",
+    "react-dom": "^16.7.0-alpha",
     "react-redux": "^5.1.0",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
@@ -21,6 +22,7 @@
     "redux-mock-store": "^1.5.3"
   },
   "scripts": {
+    "start2": "set NODE_ENV=development&& react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
